set base stats when creating site
More ergonomics when accessing sites objects
